<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuTitle"
        android:title="@string/orderBy"
        app:showAsAction="never" />
    <group
        android:id="@+id/menu_group_sort"
        android:checkableBehavior="single"
        app:showAsAction="never">
        <item
            android:id="@+id/order_by_name"
            android:title="@string/name"
            app:showAsAction="never" />
        <item
            android:id="@+id/order_by_date"
            android:title="@string/installDate"
            app:showAsAction="never" />
    </group>

    <item
        android:id="@id/menuTitle"
        android:title="@string/filter_pref"
        app:showAsAction="never" />
    <group
        android:id="@+id/menu_group_filter_pref"
        android:checkableBehavior="all"
        app:showAsAction="never">
        <item
            android:id="@+id/show_system_app"
            android:checkable="true"
            android:checked="false"
            android:title="@string/showSystemApp"
            app:showAsAction="never" />
        <item
            android:id="@+id/show_release_app"
            android:checkable="true"
            android:checked="true"
            android:title="@string/showRelease"
            app:showAsAction="never" />
        <item
            android:id="@+id/show_debug_app"
            android:checkable="true"
            android:checked="true"
            android:title="@string/showDebug"
            app:showAsAction="never" />

        <item
            android:id="@+id/show_test_only_app"
            android:checkable="true"
            android:checked="true"
            android:title="@string/showTestOnly"
            app:showAsAction="never" />

        <item
            android:id="@+id/show_game_app"
            android:checkable="true"
            android:checked="true"
            android:title="@string/showGame"
            app:showAsAction="never" />
    </group>

    <item
        android:id="@id/menuTitle"
        android:title="@string/filter_plat"
        app:showAsAction="never" />
    <group
        android:id="@+id/menu_group_filter_plat"
        android:checkableBehavior="single"
        app:showAsAction="never">
        <item
            android:id="@+id/show_all_app"
            android:checked="true"
            android:title="@string/showAll"
            app:showAsAction="never" />
        <item
            android:id="@+id/show_api_cloud_app"
            android:title="@string/showApiCloud"
            android:checked="false"
            app:showAsAction="never" />
        <item
            android:id="@+id/show_dcloud_app"
            android:title="@string/showDCloud"
            android:checked="false"
            app:showAsAction="never" />
        <item
            android:id="@+id/show_yimen_app"
            android:title="@string/showYiMen"
            android:checked="false"
            app:showAsAction="never" />
        <item
            android:id="@+id/show_flutter_app"
            android:title="@string/showFlutter"
            android:checked="false"
            app:showAsAction="never" />
        <item
            android:id="@+id/show_rn_app"
            android:title="@string/showRN"
            android:checked="false"
            app:showAsAction="never" />
    </group>

    <item
        android:id="@id/menuTitle"
        android:title="@string/other"
        app:showAsAction="never" />

    <group>
        <item
            android:id="@+id/fast_mode"
            android:checkable="true"
            android:checked="false"
            android:title="@string/fastMode"
            app:showAsAction="never" />
        <item
            android:id="@+id/menu_about"
            android:title="@string/about"
            app:showAsAction="never" />
    </group>
</menu>